force-app/main/default/objects/DSALES_InformacionDePago__c/DSALES_InformacionDePago__c.object-meta.xml
<CustomObject>
    <description>Objeto para el registro de la venta</description>
    <label>Información de pago</label>
    <nameField>
        <displayFormat>INF{00000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Información de Pagos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>