force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DALES_dineroelectronico__c.field-meta.xml
<CustomField>
    <fullName>DALES_dineroelectronico__c</fullName>
    <label>Pago dinero electrónico</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>