force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Caja__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Caja__c</fullName>
    <description>Número de caja</description>
    <label>Caja</label>
    <length>4</length>
    <type>Text</type>
</CustomField>