force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Celular_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Celular_del_Cliente__c</fullName>
    <description>Número celular del cliente</description>
    <label>Número celular del cliente</label>
    <type>Phone</type>
</CustomField>