force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Certificado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Certificado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificado</label>
    <referenceTo>DSALES_Certificado__c</referenceTo>
    <relationshipName>DSALES_Informaci_n_de_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>