force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Información de Pagos (Cliente)</relationshipLabel>
    <relationshipName>Name</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>