force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_CreditoIVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_CreditoIVA__c</fullName>
    <label>Crédito con IVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>