force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Descripci_n_del_art_culo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Descripci_n_del_art_culo__c</fullName>
    <label>Descripción del artículo</label>
    <type>TextArea</type>
</CustomField>