force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_DescripcionArticulo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DescripcionArticulo__c</fullName>
    <label>Descripción del artículo</label>
    <type>TextArea</type>
</CustomField>