force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_DireccionCliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DireccionCliente__c</fullName>
    <description>Direcicón del cliente</description>
    <label>Dirección del Cliente</label>
    <type>TextArea</type>
</CustomField>