force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_DireccionTienda__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DireccionTienda__c</fullName>
    <description>Dirección de la tienda de la venta</description>
    <label>Dirección Tienda</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>