force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_ExpEn__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ExpEn__c</fullName>
    <description>Campo que indica donde fue expedido el ticket</description>
    <label>Expedido en</label>
    <length>50</length>
    <type>Text</type>
</CustomField>