force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Factura__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Factura__c</fullName>
    <description>Valor númerico que ingresará el NPV para depositar el número de factura</description>
    <label>Factura</label>
    <length>16</length>
    <type>Text</type>
</CustomField>