force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Fecha__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fecha__c</fullName>
    <description>Fecha de la venta</description>
    <label>Fecha de la venta</label>
    <required>true</required>
    <type>Date</type>
</CustomField>