force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_FormaDePago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_FormaDePago__c</fullName>
    <description>Campo para registrar la forma de pago de la venta</description>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Tarjeta de crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>