force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Ganodineroelec__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Ganodineroelec__c</fullName>
    <label>Ganó dinero electrónico</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>