force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Montototal__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Montototal__c</fullName>
    <label>Monto total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>