force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Motoentregada__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Motoentregada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moto entregada</label>
    <type>Checkbox</type>
</CustomField>