force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Motoexterna__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Motoexterna__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moto externa</label>
    <type>Checkbox</type>
</CustomField>