force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Motor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Motor__c</fullName>
    <description>Campo para ingresar el numero del motor del vehículo</description>
    <label>Motor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>