force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Motosinseguro__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Motosinseguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moto sin seguro</label>
    <type>Checkbox</type>
</CustomField>