force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_No_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_No_de_cliente__c</fullName>
    <description>Número de cliente Coppel</description>
    <label>No. de cliente</label>
    <length>12</length>
    <type>Text</type>
</CustomField>