force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_No_de_serie__c.field-meta.xml
<CustomField>
    <fullName>DSALES_No_de_serie__c</fullName>
    <description>Número de serie del producto tangible</description>
    <label>No. de serie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>