force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Nombre_de_la_Tienda__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombre_de_la_Tienda__c</fullName>
    <description>Indica el nombre de la tienda donde se realizó la venta</description>
    <label>Nombre de la Tienda</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>