force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombre_del_cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nombre del cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>