force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Oportunidad__c</fullName>
    <description>Campo relación con la oportunidad</description>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Información de Pagos</relationshipLabel>
    <relationshipName>InformaciondePagos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>