force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Pagoefectivo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Pagoefectivo__c</fullName>
    <label>Pago efectivo</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>