force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Plazodecomprademoto__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Plazodecomprademoto__c</fullName>
    <label>Plazo de compra de moto</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>