force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Poliza__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Poliza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Póliza</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Información de Pagos</relationshipLabel>
    <relationshipName>Informaci_n_de_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>