force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Precio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Precio__c</fullName>
    <description>Precio del artículo</description>
    <label>Precio con IVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>