force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_PrecioDesIVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PrecioDesIVA__c</fullName>
    <description>Indica el precio del producto tangible (original con descuento con IVA)</description>
    <label>Precio con descuento con IVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>