force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_PrecioDesSinIVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PrecioDesSinIVA__c</fullName>
    <description>Indica el precio del producto tangible (original con descuento sin IVA)</description>
    <label>Precio con descuento sin IVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>