force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_PrecioSinIVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PrecioSinIVA__c</fullName>
    <description>Indica el precio del producto tangible (original sin descuento sin IVA)</description>
    <label>Precio sin IVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>