force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_ProductoAdquirido__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ProductoAdquirido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relación entre el objeto Producto Adquirido y el Pago.</description>
    <label>Producto Adquirido</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Información de Pagos</relationshipLabel>
    <relationshipName>Informaci_n_de_Pagos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>