force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Tel_fono_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tel_fono_del_cliente__c</fullName>
    <label>Teléfono del cliente</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>