force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Telefono__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Telefono__c</fullName>
    <description>Teléfono de la tienda</description>
    <label>Teléfono Tienda</label>
    <type>Phone</type>
</CustomField>