force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_TelefonoCliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TelefonoCliente__c</fullName>
    <label>Teléfono del cliente</label>
    <type>Phone</type>
</CustomField>