force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSales_Tienda__c.field-meta.xml
<CustomField>
    <fullName>DSales_Tienda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tienda</label>
    <referenceTo>Tienda__c</referenceTo>
    <relationshipName>Informacion_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>