force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_TipoCompra__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoCompra__c</fullName>
    <description>Indica si el producto adquirido fue un producto tangible o un servicio</description>
    <label>Tipo de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>