force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_TotalContado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TotalContado__c</fullName>
    <label>Total de Compra</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>