force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_VehIculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_VehIculo__c</fullName>
    <description>Campo para ingresar el nombre del vehículo</description>
    <label>Vehículo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>