force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSALES_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Vendedor__c</fullName>
    <description>Número de vendedor</description>
    <label>Vendedor</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>