force-app/main/default/objects/DSALES_InformacionDePago__c/fields/DSLAES_GEXPagada__c.field-meta.xml
<CustomField>
    <fullName>DSLAES_GEXPagada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que un producto de servicio de GEX ya está pagada</description>
    <label>Garantia Extendida Pagada</label>
    <type>Checkbox</type>
</CustomField>