force-app/main/default/objects/DSALES_InformacionDePago__c/recordTypes/DSALES_Pagos_en_NPV.recordType-meta.xml
<RecordType>
    <fullName>DSALES_Pagos_en_NPV</fullName>
    <active>true</active>
    <description>Aquí se registrarán los pagos d ela venta desde el NPV</description>
    <label>Pagos de Venta en NPV</label>
</RecordType>