force-app/main/default/objects/DSALES_InformacionDePago__c/recordTypes/DSALES_PagosdeVentaenNPVSM_c.recordType-meta.xml
<RecordType>
    <fullName>DSALES_PagosdeVentaenNPVSM_c</fullName>
    <active>true</active>
    <description>Registro de pagos desde el nuevo punto de venta para SM</description>
    <label>Pagos de Venta en NPV de SM</label>
</RecordType>