force-app/main/default/objects/DSALES_InformacionDePago__c/listViews/Mis_Informaci_n_de_Pago.listView-meta.xml
<ListView>
    <fullName>Mis_Informaci_n_de_Pago</fullName>
    <columns>NAME</columns>
    <columns>DSALES_ProductoAdquirido__c</columns>
    <columns>DSALES_Fecha__c</columns>
    <columns>DSALES_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <!--filterScope>Mine</filterScope-->
    <label>Mi Información de Pago</label>
</ListView>